--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
   </main>
   <section>
     <footer class="roda_pe">
-
+      <div class="titulo_roda_pe">
+        <h1>Weartake</h1>
+      </div>
+      <div class="newletter">
+        <h3>Fique por dentro de todas as nossas novidades e promoções!</h3>
+        <label>E-mail</label>
+        <input type="email" placeholder=
+        "  Digite seu e-mail">
+        <button class="butao_email" type="submit">Cadastrar</button>
+      </div>
     </footer>
   </section>
 </body>
