--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
       <div class="newletter">
         <h3>Fique por dentro de todas as nossas novidades e promoções!</h3>
         <label>E-mail</label>
-        <input type="email" placeholder=
-        "  Digite seu e-mail">
+        <input type="email" placeholder="  Digite seu e-mail">
         <button class="butao_email" type="submit">Cadastrar</button>
       </div>
     </footer>
